# titanic-python-app

./: Dockerfile  README.md  app.py  pyproject.toml
keboola-config/: setup.sh
keboola-config/nginx/sites/: app.conf
keboola-config/supervisord/: app.conf
