[project]
name            = "titanic-js-data-app"
version         = "1.0.0"
description     = "Titanic Data App — FastAPI + vanilla JS"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pandas==2.2.2",
]

[build-system]
requires      = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
